# ultrack_CTC_submission

./: .dockerignore  .gitignore  Dockerfile  Fluo-C3DL-MDA231-01.sh  Fluo-C3DL-MDA231-02.sh  Fluo-N3DH-CE-01.sh  Fluo-N3DH-CE-02.sh  Fluo-N3DL-DRO-01.sh  Fluo-N3DL-DRO-02.sh  Fluo-N3DL-TRIC-01.sh  Fluo-N3DL-TRIC-02.sh  Fluo-N3DL-TRIF-01.sh  Fluo-N3DL-TRIF-02.sh  README.md  clean.sh  compute_labels.py  download.sh  inference.py  normalize.py  register.py  requirements.txt  run_all.sh  train.py  train.sh  unet.py  utils.py  vector_field.py  view-submission.py
dexp-dl/: .gitignore  .pre-commit-config.yaml  setup.cfg  setup.py
dexp-dl/dexp_dl/: conftest.py
dexp-dl/dexp_dl/cli/: main.py  utils.py
dexp-dl/dexp_dl/data/: __init__.py  cocolvis.py  dexpdataset.py  isdataset.py  segmentationdataset.py  slicedataset.py  tifdataset.py  utils.py
dexp-dl/dexp_dl/inference/: __init__.py  inference.py
dexp-dl/dexp_dl/loss/: __init__.py  loss.py  mas.py
dexp-dl/dexp_dl/metrics/: __init__.py  metrics.py
dexp-dl/dexp_dl/models/: _hrnet.py  _resnet.py  hrnet.py  hrnet_ocr.py  initializer.py  ismodel.py  ocr.py  resnetv1b.py  unet.py  utils.py
dexp-dl/dexp_dl/postprocessing/: ellipsoid.py  graph.py  hierarchy.py  node.py
dexp-dl/dexp_dl/preprocessing/: __init__.py  clahe.py  preprocessing.py  rescale_z.py
dexp-dl/dexp_dl/training/: __init__.py  generic_multivariate_3d.py  istrainer.py  masistrainer.py  utils.py
dexp-dl/dexp_dl/transforms/: __init__.py  basetransform.py  (+7 more)
dexp-dl/examples/: edge_detection_2dot5D.py  train_is_cocolvis.py
dexp-dl/tutorials/: fine-tuning.md
(+23 files in other folders)
