[metadata]
name = dexp-dl
author = Jordao Bragantini
author_email = jordao.bragantini@czbiohub.org

[options]
packages = find:
python_requires = >=3.7
# add your package requirements here
install_requires =
    torch
    dexp
    timm
    scikit-image
    higra
    pytorch-lightning
    monai
    opencv-python
    edt
    scipy>=1.8.0
    tiler==0.3.1  # fixed to avoid bugs due to api changes

[options.entry_points]
console_scripts =
    dexp-dl = dexp_dl.cli.main:main
